# ComputerOOP

./: CMakeLists.txt  README.md  app.cpp  app.h  computermonitor.cpp  computermonitor.h  container.cpp  container.h  containerinterface.h  copy of monitor.cpp.txt  electronic.cpp  electronic.h  hairdryer.cpp  hairdryer.h  interface.h  main.cpp  model.h  monitor.cpp  monitor.h  node.h  test.cpp  test.h  useful.cpp  useful.h  user.cpp  user.h
html/: annotated.html  app_8h_source.html  class_app-members.html  class_app.html  class_computer_monitor-members.html  class_computer_monitor.html  class_electronic-members.html  class_electronic.html  class_hairdryer-members.html  class_hairdryer.html  class_monitor-members.html  class_monitor.html  class_user-members.html  class_user.html  classes.html  computermonitor_8h_source.html  electronic_8h_source.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_rela.html  functions_vars.html  hairdryer_8h_source.html  hierarchy.html  index.html  interface_8h_source.html  md__r_e_a_d_m_e.html  menudata.js  monitor_8h_source.html  pages.html  useful_8h_source.html  user_8h_source.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  (+28 more)
latex/: annotated.tex  class_app.tex  class_computer_monitor.eps  class_computer_monitor.tex  class_electronic.eps  class_electronic.tex  class_hairdryer.eps  class_hairdryer.tex  class_monitor.eps  class_monitor.tex  class_user.tex  hierarchy.tex  md__r_e_a_d_m_e.tex  refman.tex
